Migrate Contraction Maps post
- Reuploaded the Contraction Map post form old site.
- Placed in rough note section.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -71,3 +71,5 @@ coursework:
         url: /drag-force/
       - title: "• Linear ODEs"
         url: /linear-ODEs/
+      - title: "• Contraction Maps"
+        url: /contraction-maps/
