Minor edits & fixes 7
- Addded a new banner image for CS posts. Updated sequential search post to use it.
- Grammatical edits to Binomial Coefficient post.
- Content fixes to Relations post.
- Fixed 2 broken links on portfolio page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -26,9 +26,9 @@ portfolio:
       - title: "• qRNG"
         url: "https://github.com/ozanerhansha/qRNG"
       - title: "• Breast Cancer Classification Network"
-        url: "https://github.com/ozanerhansha/qRNG"
+        url: "/breast-cancer-classification/"
       - title: "• FileToPNG"
-        url: "https://github.com/ozanerhansha/qRNG"
+        url: "/filetopng/"
       - title: "• Reinforcement Learning Pong AI"
         url: "/reinforcement-learning-pong/"
       - title: "• Neurosky EEG Readings App"
