--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
-# Configs for ozanerhansha.github.io
+# Configs for ozaner.github.io
 
 title: "Ozaner's Notes"
-name: "ozanerhansha.github.io"
+name: "ozaner.github.io"
 # email: ozanerhansha@gmail.com
-url: "https://ozanerhansha.github.io"
-repository: "ozanerhansha/ozanerhansha.github.io"
+url: "https://ozaner.github.io"
+repository: "ozaner/ozaner.github.io"
 description: >- # this means to ignore newlines until "baseurl:"
   My notes on math, computer science, philosophy, personal projects, and more.
 
@@ -38,7 +38,7 @@ author:
   avatar : "/assets/images/bio.gif"
   bio    : "My notes on math, computer science, philosophy, personal projects, and more."
   # location: "Seattle, WA"
-  github : ozanerhansha
+  github : ozaner
   # linkedin: ozanerhansha
   # email  : ozanerhansha@gmail.com
   medium : ozanerhansha
