Minor edits & fixes 6
- Updated resume and fixed hyperlinks
- Renamed "Portfolio" page to "Projects" page on top bar (still called portfolio page under the hood/in the link)
- Spelling fix in Coursework and Project pages
- Math edit in Inclusion-Exclusion post
- Grammatical fixes in Grounding of Ideas post
- Edits to Turing Test post for clarity

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,7 @@ main:
     url: /
   # - title: "About"
   #   url: /about/
-  - title: "Portfolio"
+  - title: "Projects"
     url: /portfolio/
   - title: "Coursework"
     url: /coursework/
@@ -21,7 +21,7 @@ main:
 
 # sidebar for projects
 portfolio:
-  - title: "Projects"
+  - title: "All Projects"
     children:
       - title: "• qRNG"
         url: "https://github.com/ozaner/qRNG"
