--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ plugins:
 
 # Build settings
 markdown: kramdown
-theme: "minimal-mistakes-jekyll"
+# theme: "minimal-mistakes-jekyll"
 remote_theme: "mmistakes/minimal-mistakes"
 minimal_mistakes_skin: "dirt"
   
